--- a/css/hero.css
+++ b/css/hero.css
@@ -1,68 +1,45 @@
 /* Hero Section styles */
 .hero-section {
-  align-self: stretch;
-  padding: 96px 24px 42px 24px;
-  background: white;
+  padding: 96px 24px 42px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  flex-wrap: wrap;
-  align-content: center;
   width: 100%;
   box-sizing: border-box;
+  gap: 24px;
 }
 
 .hero-text-content {
-  flex: 1 1 0;
-  height: auto;
+  flex: 1;
   max-width: 600px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
   align-items: flex-start;
-  gap: 48px;
 }
 
 .hero-text-inner {
-  align-self: stretch;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
   gap: 24px;
 }
 
 .hero-name {
-  align-self: stretch;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  color: #2d2d2d;
   font-size: 20px;
   font-weight: 600;
   line-height: 30px;
-  word-wrap: break-word;
 }
 
 .hero-title {
-  align-self: stretch;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  color: #2d2d2d;
   font-size: 52px;
   font-weight: 600;
-  word-wrap: break-word;
   line-height: 1.2;
 }
 
 .hero-description {
-  align-self: stretch;
-  color: #2d2d2d;
   font-size: 17px;
-  font-weight: 400;
   line-height: 27px;
-  word-wrap: break-word;
+  text-align: justify;
 }
 
 .hero-image-container {
@@ -80,12 +57,12 @@
 .hero-shape.shape-1 {
   width: 218px;
   height: 223px;
-  left: 0px;
+  left: 0;
   top: 137px;
   background: linear-gradient(
     180deg,
     #560618 0%,
-    rgba(188, 13.12, 52.47, 0.75) 100%
+    rgba(188, 13, 52, 0.75) 100%
   );
 }
 
@@ -102,15 +79,15 @@
   width: 262px;
   height: 254px;
   left: 218px;
-  top: 0px;
+  top: 0;
   position: absolute;
 }
 
 .hero-shape.shape-3 {
   width: 282px;
   height: 137px;
-  left: 0px;
-  top: 0px;
+  left: 0;
+  top: 0;
   background: linear-gradient(180deg, #5e6b46 0%, #b8d189 100%);
   border-bottom-right-radius: 50px;
 }
