--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 /* Import component styles */
 @import 'css/header.css';
 @import 'css/hero.css';
-@import 'css/sections.css';
+@import 'css/portfolio.css';
 @import 'css/certificates.css';
 @import 'css/footer.css';
 
