--- a/css/header.css
+++ b/css/header.css
@@ -17,10 +17,9 @@
 }
 
 .logo {
-  color: #2d2d2d;
   font-size: 20px;
   font-weight: 600;
-  line-height: 30px;
+  line-height: 1.5;
 }
 
 .nav-links {
@@ -29,10 +28,7 @@
 }
 
 .nav-item {
-  color: #2d2d2d;
   font-size: 17px;
-  font-weight: 400;
-  line-height: 27px;
   cursor: pointer;
 }
 
